<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:textSize="20dp"
            android:text="Welcome Folks, Create your Cake Now!"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/shape"
                android:textAllCaps="true"
                android:textFontWeight="700"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#cecece" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/square"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/square"
                    android:textSize="18dp"
                    android:onClick="showShape"/>

                <RadioButton
                    android:id="@+id/circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/circle"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/triangle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/triangle"
                    android:textSize="18dp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/flavor"
                android:textAllCaps="true"
                android:textFontWeight="700"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#cecece" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/caramel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caramel"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/chocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chocolate"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/custard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custard"
                    android:textSize="18dp" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/flavor"
                android:textAllCaps="true"
                android:textFontWeight="700"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#cecece" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/candies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candies"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/smallcookies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smallcookies"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/powderedsugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powderedsugar"
                    android:textSize="18dp" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/txt_message"
                android:textAllCaps="true"
                android:textFontWeight="700"
                android:textSize="20dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#cecece" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Please input your message here."
                android:lines="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/btn_proceed"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset"
                android:textSize="18dp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>

